<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/EditTextMontoPagoTotal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".RegistryCredit">

    <TextView
        android:id="@+id/textViewFechaFinal"
        android:layout_width="125dp"
        android:layout_height="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/editTextFechaFinalizacionPlaceholder"
        android:textColor="#2E7D32"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFechaFinalizacion"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/textViewFechaInicio"
        android:layout_width="118dp"
        android:layout_height="33dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/editTextFechaPlaceholder"
        android:textColor="#2E7D32"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFecha"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textViewMontoCuota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textViewMontoporCuota"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMontoTotal"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/textViewMontoaPagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textViewMontoaPagar"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFechaFinal"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/textViewFechaFinalizacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textViewFechaFinalizacion"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFechaInicio"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/textViewFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textViewFecha"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMonto"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewIntereses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textViewInteres"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistroCredito" />

    <Spinner
        android:id="@+id/spinnerInteres"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:dropDownWidth="180dp"
        android:entries="@array/Spinner_items_credits"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/textViewFecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toEndOf="@+id/editTextMonto"
        app:layout_constraintTop_toBottomOf="@+id/textViewIntereses"
        app:layout_constraintVertical_bias="0.0"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <TextView
        android:id="@+id/textViewMontoCredito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textViewMontoCredito"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistroCredito" />

    <TextView
        android:id="@+id/textViewPlazo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textViewPlazo"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistroCredito" />

    <TextView
        android:id="@+id/textViewRegistroCredito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="768dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:includeFontPadding="true"
        android:text="@string/textViewRegistroCredito"
        android:textColor="#BC7A18"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="382dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="659dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/solicitud_de_prestamo"
        android:textColor="#2F43B6"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextMonto"
        android:layout_width="134dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editTextMontoPlaceholder"
        android:inputType="number"
        android:maxLength="6"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMontoCredito" />

    <Button
        android:id="@+id/buttonsubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:backgroundTint="#358838"
        android:fontFamily="sans-serif-medium"
        android:shadowColor="#41AC46"
        android:text="@string/buttonSubmit"
        android:textColor="#F5F6F6"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/textViewNumberPlace"
        android:inputType="number"
        android:maxLength="2"
        android:textColorHint="#4A4646"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toEndOf="@+id/spinnerInteres"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlazo" />

    <TextView
        android:id="@+id/textViewMontoTotal"
        android:layout_width="158dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textViewMontoaPagarPlaceholder"
        android:textColor="#00838F"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMontoaPagar"
        tools:text="@string/textViewMontoaPagarPlaceholder" />

    <TextView
        android:id="@+id/textViewMontoCuotaR"
        android:layout_width="156dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="244dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textViewMontoporCuotaPlaceholder"
        android:textColor="#827717"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMontoCuota"
        tools:text="@string/textViewMontoporCuotaPlaceholder" />

</androidx.constraintlayout.widget.ConstraintLayout>